# blackboard

./: .gitignore  CMakeLists.txt
src/: cmd_processor.cc  cmd_processor.h  input_widget.cc  input_widget.h  main.cc  main_window.cc  main_window.h  output_widget.cc  output_widget.h  var_processor.cc  var_processor.h
test/: CMakeLists.txt  var_processor.cc
